test/org/midica/testfiles/failing/eff-func-param-periods-zero.midica
INCLUDE inc/instruments.midica


0: vol.sin(0,100%,0)
